# uba-mia

./: .gitignore  README.md  notebook-project-style.ipynb  pyproject.toml
mia-ast1/Trabajo final/: tp-final-v2.ipynb  tp-final.html  tp-final.ipynb  tp-final_unificado.ipynb
mia-ast1/Trabajo final/datasets/: BTCUSDT-20240301-20250301.csv  BTCUSDT_1D.csv  BTCUSDT_1D.pkl  metrics.csv
mia-ast2/: Link repositorio  TPFinal.ipynb  patchtst_model_complete.pth
mia-ast2/resources/: BTCUSDT_1D.csv  dataset.csv  previous_metrics_comparison.csv
mia-nlp2/: .env.example
mia-nlp2/Ejemplos/: deepseek-local-example.ipynb  groq-example.ipynb  langgraph-plan-and-execute.ipynb  local-vector-database.ipynb  pinecone-example.ipynb  rag-langchain-example.ipynb  sentence-transformers-example.ipynb
mia-nlp2/Practico 1/: app.py  custom_prompts.py  muestra.mkv  repartido-clase.ipynb  research.ipynb  ui.py
mia-nlp2/Practico 2/: app.py  custom_prompts.py  graph.py  research.ipynb  st_callable_util.py  utils.py
mia-nlp2/Practico 3/: research.ipynb
mia-rl2/TP_1_AR_CHALLENGE/DQL_Edited/: train.py
mia-vpc3/Practicos/Practico 1/: practico1.ipynb
mia-vpc3/Practicos/Practico 2/: practico2.ipynb  trainer.py
mia-vpc3/Practicos/TPFinal/models/cvt-13/: metrics.csv  predictions.csv
mia-vpc3/Practicos/TPFinal/models/cvt-21/: metrics.csv  predictions.csv
